--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "concurrently": "^5.2.0",
     "http-server": "^0.11.1",
     "live-server": "^1.2.1",
-    "run-script-os": "^1.0.7"
+    "npm": "^8.1.3"
+  },
+  "devDependencies": {
+    "run-script-os": "^1.1.6"
   }
 }
