--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^6.4.0",
     "http-server": "^14.0.0",
     "live-server": "^1.1.0",
+    "node-sass": "^7.0.0",
     "npm": "^8.1.3"
   },
   "devDependencies": {
